# sonar

./: .gitignore  LICENSE  README.md  build.sh  gen-icon.py  package-lock.json  package.json
linux-build/: Dockerfile  build.sh
src/: index.html  main.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
windows-build/: Dockerfile  build.sh
