[package]
name = "sonar"
version = "1.0.0"
description = "Sonar — desktop network / IP range scanner"
authors = ["Sonar contributors"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "sonar_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "net", "time", "sync", "macros", "process", "io-util"] }
futures = "0.3"
dns-lookup = "2"

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
strip = true
